hphp/test/quick/call11.php.expectf

Fatal error: Call to undefined method C::foo() in %s on line 11
